Created Capstone Project

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <section class="site-banner">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 col-md-12 site-title text-sm-center order-1">
+            <div class="col-lg-6 col-md-12 site-title text-sm-center order-2 order-md-1">
               <h3 class="title-text">Hi!</h3>
               <h1 class="title-text text-uppercase">I'm Daniel</h1>
               <h4 class="title-text text-uppercase">Full Stack Web Developer</h4>
@@ -67,7 +67,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 col-md-12 order-2">
+            <div class="col-lg-6 col-md-12 order-1 order-md-2">
               <img src="img/banner.png" alt="banner" class="banner-image img-fluid">
             </div>
           </div>
