--- a/index.html
+++ b/index.html
@@ -29,15 +29,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
-                  <ul class="navbar-nav">
+                  <ul class="navbar-nav mr-sm-0">
                     <li class="nav-item active">
                       <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Skills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Projects</a>
@@ -55,12 +52,12 @@
 
       <!-- =====================MAIN SITE====================== -->
 
-    <main class="main-site">
+    <main class="main-site overflow-hidden">
       <section class="site-banner">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-6 col-12 order-2 order-md-1 site-title">
-              <h3 class="title-text">Hi!</h3>
+        <div class="container-fluid align-content-center p-1">
+          <div class="row pr-sm-0 pl-1">
+            <div class="col-lg-6 col-sm-12 order-2 order-lg-1 site-title pt-0">
+              <h3 class="title-text pt-1 pt-lg-5">Hi!</h3>
               <h1 class="title-text text-uppercase">I'm Daniel</h1>
               <h4 class="title-text text-uppercase">Full Stack Web Developer</h4>
               <div class="site-button">
@@ -70,7 +67,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 col-12 order-1 order-md-2">
+            <div class="col-lg-6 col-sm-12 order-1 order-lg-2">
               <img src="img/banner.png" alt="banner" class="banner-image img-fluid">
             </div>
           </div>
@@ -79,38 +76,34 @@
     </main>
 
     <!-- ===================SECTION ABOUT===================== -->
-    <div class="section-about pt-md-5">
+    <div class="section-about pt-lg-5 pt-4 pr-1 pl-1">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6 col-sm-12 ">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/front-end.jpg" class="d-block w-100" alt="...">
+                    <img src="img/skills-1.jpg" class="d-block w-100" alt="..." class="img-fluid">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/Fullstack.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="img/back-end.jpg" class="d-block w-100" alt="...">
+                  <img src="img/skills-3.jpg" class="d-block w-100" alt="..." class="img-fluid">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12">
+          <div class="col-lg-6 col-sm-12 pt-lg-5">
               <h2 class="text-uppercase text-sm-center mt-1 mt-md-5 title-head">
                   Let me Introduce Myself
               </h2>
               <div class="paragraph text-justify">
                 <p class="para">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Error rerum iure obcaecati vel
-                  possimus officia maiores perferendis ut! Quos, perspiciatis.
+                 Hello There, I am Mark Daniel a Full Stack Web Developer. I don't like to define myself by the 
+                 work I've done. I define myself by the work I want to do.
                 </p>
                 <p class="para">
-                  It is a long established fact that a reader will be distracted by the readable content
-                  of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                  more-or-less normal distribution of letters, as opposed to using 'Content here, content
-                  here.
+                 Through my degree in Computer Science, I have discovered my passion for anayzing and designing websites. I'm excited
+                 about the oppurtunity to work with mentor and immerse myself in learning new skills. Being a Full Stack Web Developer opens
+                 so many doors for me to dig deep into what I am passionate about.
                 </p>
               </div>
           </div>
@@ -119,16 +112,16 @@
     </div>
 
     <!-- ================SECTION PROJECTS================= -->
-    <div class="section-projects pb-5 pt-5">
+    <div class="section-projects pb-5 pt-5 p-0">
       <div class="container-fluid">
-        <h3 class="text-uppercase text-center mb-5 project">Projects</h3>
+        <h3 class="text-uppercase text-sm-center  mb-5 project">Projects</h3>
         <div class="row">
           <div class="card-deck col-sm-12">
             <div class="card">
               <img src="img/front-end.jpg" class="card-img-top" alt="frontend">
               <div class="card-body">
                 <h5 class="card-title text-center">Front-End Development</h5>
-                <p class="card-text text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text text-center">The project contains the web developer portfolio. It contains the bio/about section and the relevant experience of the developer.</p>
                 <div class="buttons text-center pt-3">
                     <button type="button" class="btn btn-primary">Learn More &rarr;</button>
                 </div>
@@ -138,7 +131,7 @@
               <img src="img/back-end.jpg" class="card-img-top" alt="backend">
               <div class="card-body">
                 <h5 class="card-title text-center">Back-End Development</h5>
-                <p class="card-text text-center">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text text-center">The project contains the server side web application logic and integration of the work front-end developers.</p>
                 <div class="buttons text-center pt-3">
                   <button type="button" class="btn btn-primary">Learn More &rarr;</button>
                 </div>
@@ -149,8 +142,8 @@
               <img src="img/Fullstack.jpg" class="card-img-top" alt="Full-Stack">
               <div class="card-body">
                 <h5 class="card-title text-center">Full-Stack Development</h5>
-                <p class="card-text text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <div class="buttons text-center">
+                <p class="card-text text-center">The project containts the entire computer system of application from the front-end to the back end that connects the two.</p>
+                <div class="buttons text-center pt-2">
                   <button type="button" class="btn btn-primary">Learn More &rarr;</button>
                 </div>
                 <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
@@ -161,73 +154,164 @@
       </div>
     </div>
 
-    <div class="section-contact">
+    <div class="section-contact pb-md-3">
       <h3 class="text-center text-uppercase contact">I'm Happy to hear from you</h3>
       <div class="container-fluid">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-lg-6 col-12">
           <form>
-            <div class="form-group">
-              <label class="form_label" for="fullName">Full Name</label>
-              <input  type="text" class="form-control form_input" id="exampleFormControlInput1" placeholder="John Doe" required>
-            </div>
+              <div class="form-group">
+                <label class="form_label" for="fullName">Full Name</label>
+                <input  type="text" class="form-control form_input" id="exampleFormControlInput1" placeholder="John Doe" required>
+              </div>
 
-            <div class="form-group">
-              <label class="form_label" for="email">Email Address</label>
-              <input  type="email" class="form-control form_input" id="exampleFormControlInput1" placeholder="name@example.com" required>
-            </div>
+              <div class="form-group">
+                <label class="form_label" for="email">Email Address</label>
+                <input  type="email" class="form-control form_input" id="exampleFormControlInput1" placeholder="name@example.com" required>
+              </div>
 
-            <div class="form-group">
-              <label for="exampleFormControlSelect2">How did you find me?</label>
-              <select class="form-control" id="exampleFormControlSelect2">
-                <option>Friends</option>
-                <option>Search Engine</option>
-                <option>Facebook</option>
-                <option>Others</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label class="form_label" for="exampleFormControlTextarea1">Comments</label>
-              <textarea class="form-control form_input" placeholder="Write a comments" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-
-            <div class="buttons">
-              <button type="button" class="btn btn-success">Send It</button>
-            </div>
+              <div class="form-group">
+                <label for="exampleFormControlSelect2">How did you find me?</label>
+                <select class="form-control" id="exampleFormControlSelect2">
+                  <option>Friends</option>
+                  <option>Search Engine</option>
+                  <option>Facebook</option>
+                  <option>Others</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label class="form_label" for="exampleFormControlTextarea1">Comments</label>
+                <textarea class="form-control form_input" placeholder="Write a comments" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+              <div class="buttons">
+                <button type="button" class="btn btn-success mb-4">Send It</button>
+              </div>
           </form>
         </div>
-        <div class="col-md-6">
-            <!--Google map-->
-          <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-            <iframe src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-              style="border:0" allowfullscreen></iframe>
-          </div>
+        <div>
+        <div class="col-lg-6 col-12 justify-content-center pb-4">
+          <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=958&amp;height=430&amp;hl=en&amp;q=Ilocos Norte&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://www.bgmi.org/">BGMI</a></div>
         </div>
       </div>
       </div>
     </div>
 
-    <footer class="section-footer bg-primary">
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-          <img src="img/logo.png" alt="logo" width="10%" class="img-fluid">
-        </div>
-        <div class="d-flex mt-5">
-          <div class="col">
-             <i class="fab fa-facebook-square"><a href=""></a></i>
-             <i class="fab fa-github"><a href=""></a></i>
-             <i class="fab fa-linkedin-in"><a href=""></a></i>
-          </div>
-          <div class="col">
-            <p>Copyright &copy; 2021 by Mark Daniel Bisac. All rights reserved</p>
-          </div>
-        </div>
-      </div>
-    </footer>
+
     
+    <footer class="page-footer font-small bg-dark">
 
+          <!-- Footer Links -->
+          <div class="container-fluid">
 
+            <!-- Grid row-->
+            <div class="row text-center d-flex justify-content-center pt-5 mb-3">
 
+              <!-- Grid column -->
+              <div class="col-md-2 mb-3 col-sm-12">
+                <h6 class="text-uppercase font-weight-bold">
+                  <a href="#">About us</a>
+                </h6>
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-2 mb-3 col-sm-12">
+                <h6 class="text-uppercase font-weight-bold">
+                  <a href="#">Products</a>
+                </h6>
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-2 mb-3 col-sm-12">
+                <h6 class="text-uppercase font-weight-bold">
+                  <a href="#!">Awards</a>
+                </h6>
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-2 mb-3 col-sm-12">
+                <h6 class="text-uppercase font-weight-bold">
+                  <a href="#!">Help</a>
+                </h6>
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-2 mb-3">
+                <h6 class="text-uppercase font-weight-bold">
+                  <a href="#!">Contact</a>
+                </h6>
+              </div>
+              <!-- Grid column -->
+
+            </div>
+            <!-- Grid row-->
+
+            <!-- Grid row-->
+            <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
+
+              <!-- Grid column -->
+              <div class="col-md-8 col-12 pt-1 mb-3">
+                <img src="img/logo.png" alt="logo" class="img-fluid">
+              </div>
+              <!-- Grid column -->
+
+            </div>
+
+            <!-- Grid row-->
+            <div class="row pb-3">
+
+              <!-- Grid column -->
+              <div class="col-md-12 text-center">
+
+                <div class="mb-5 flex-center">
+
+                  <!-- Facebook -->
+                  <a class="fb-ic">
+                    <i class="fab fa-facebook-f fa-lg white-text mr-4"> </i>
+                  </a>
+                  <!-- Twitter -->
+                  <a class="tw-ic">
+                    <i class="fab fa-twitter fa-lg white-text mr-4"> </i>
+                  </a>
+                  <!-- Google +-->
+                  <a class="gplus-ic">
+                    <i class="fab fa-google-plus-g fa-lg white-text mr-4"> </i>
+                  </a>
+                  <!--Linkedin -->
+                  <a class="li-ic">
+                    <i class="fab fa-linkedin-in fa-lg white-text mr-4"> </i>
+                  </a>
+                  <!--Instagram-->
+                  <a class="ins-ic">
+                    <i class="fab fa-instagram fa-lg white-text mr-4"> </i>
+                  </a>
+                  <!--Pinterest-->
+                  <a class="pin-ic">
+                    <i class="fab fa-pinterest fa-lg white-text"> </i>
+                  </a>
+
+                </div>
+
+              </div>
+              <!-- Grid column -->
+
+            </div>
+            <!-- Grid row-->
+
+          </div>
+          <!-- Footer Links -->
+
+          <!-- Copyright -->
+          <div class="footer-copyright text-center bg-primary py-3">© 2021 Copyright:
+             Mark Daniel Bisac
+          </div>
+          <!-- Copyright -->
+
+        </footer>
+        <!-- Footer -->
 
 
      <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
