Fix the dead links

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
 
     <!-- ================SECTION PROJECTS================= -->
-    <div class="section-projects pb-5 pt-5 p-0">
+    <div id="s-projects" class="section-projects pb-5 pt-5 p-0">
       <div class="container-fluid">
         <h3 class="text-uppercase text-center mb-5 project">Projects</h3>
         <div class="row">
