--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   </div>
 
   <!-- ========================FOOTER====================== -->
-  <footer class="container-fluid bg-primary py-5 text-center">
+  <footer class="container-fluid bg-primary py-5 text-center text-md-left">
     <div class="container">
        <div class="row">
           <div class="col-md-6">
@@ -223,7 +223,7 @@
           <div class="col-md-6">
              <div class="row">
                 <div class="col-md-6 px-4">
-                   <h6 class="pt-2">Links</h6>
+                   <h6 class="pt-2 pt-lg-0">Links</h6>
                    <div class="row">
                       <div class="col-md-6">
                          <ul>
