--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- CSS Styles -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+
     <title>Web Portfolio</title>
 </head>
 <body>
