--- a/index.html
+++ b/index.html
@@ -126,33 +126,31 @@
             <div class="card">
               <img src="img/front-end.jpg" class="card-img-top" alt="frontend">
               <div class="card-body">
-                <h5 class="card-title text-center">Front-End Development</h5>
-                <p class="card-text text-center">The project contains the web developer portfolio. It contains the bio/about section and the relevant experience of the developer.</p>
+                <h5 class="card-title text-center">OmniFood</h5>
+                <p class="card-text text-center">Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise</p>
                 <div class="buttons text-center pt-3">
-                   <a target="_blank" href="https://mark-bisac.github.io/csp1/"><button type="button" class="btn btn-primary">Learn More &rarr;</button></a>
+                   <a target="_blank" href="https://sinichikudo02.github.io/OmniFood/"><button type="button" class="btn btn-primary">Learn More &rarr;</button></a>
                 </div>
               </div>
             </div>
             <div class="card">
               <img src="img/back-end.jpg" class="card-img-top" alt="backend">
               <div class="card-body">
-                <h5 class="card-title text-center">Back-End Development</h5>
-                <p class="card-text text-center">The project contains the server side web application logic and integration of the work front-end developers.</p>
+                <h5 class="card-title text-center">Natours Project</h5>
+                <p class="card-text text-center">This is my first website that I created using html and advanced css. This website shows the different part of tours (mountain, sea and forest tours)that you want to go on.)</p>
                 <div class="buttons text-center pt-3">
-                  <button type="button" class="btn btn-danger">Learn More &rarr;</button>
+                  <a target="_blank" href="https://sinichikudo02.github.io/NaTour/"><button type="button" class="btn btn-primary">Learn More &rarr;</button></a>
                 </div>
-                <p class="card-text text-center pt-1"><small class="text-muted">Not Available Right Now</small></p> 
               </div>
             </div>
             <div class="card">
               <img src="img/Fullstack.jpg" class="card-img-top" alt="Full-Stack">
               <div class="card-body">
-                <h5 class="card-title text-center">Full-Stack Development</h5>
+                <h5 class="card-title text-center">Ecommerce Website</h5>
                 <p class="card-text text-center">The project containts the entire computer system of application from the front-end to the back end that connects the two.</p>
                 <div class="buttons text-center pt-2">
-                  <button type="button" class="btn btn-danger">Learn More &rarr;</button>
+                  <a target="_blank" href="https://gifted-shirley-67df6c.netlify.app/"><button type="button" class="btn btn-primary">Learn More &rarr;</button></a>
                 </div>
-                <p class="card-text text-center pt-1"><small class="text-muted">Not Available Right Now</small></p>
               </div>
             </div>
           </div>
@@ -245,10 +243,6 @@
                       <a target="_blank" href="https://github.com/Mark-Bisac"><i class="fa fa-github" aria-hidden="true"></i></a>
                       <a target="_blank" href="https://www.linkedin.com/in/mark-daniel-bisac-89415b1a5/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                    </div>
-                   <form class="form-footer my-3">
-                      <input type="text"  placeholder="search here...." name="search">
-                      <input type="button" value="Go" >
-                   </form>
                 </div>
              </div>
           </div>
